# MagTrack

./: .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: tests.yml  (+4 more)
benchmarks/: __init__.py  bechmark_for_publication.py  benchmark.py  benchmark_auto_conv.py  benchmark_auto_conv_multiline.py  benchmark_auto_conv_multiline_sub_pixel.py  benchmark_auto_conv_sub_pixel.py  benchmark_binmean.py  benchmark_center_of_mass.py  benchmark_gaussian.py  benchmark_gaussian_2d.py  benchmark_lookup_z.py  benchmark_misc.py  benchmark_parabolic_vertex.py  benchmark_pearson.py  benchmark_qi.py  benchmark_radial_profile.py  log_utils.py  plot_benchmarks.py  run_all.py
docs/: requirements.txt
examples/: examples.ipynb  show_accuracy_montage.py
magtrack/: __init__.py  _cupy.py  _xp.py  core.py  simulation.py  utils.py
tests/: test.py  test_accuracy_montage.py  test_accuracy_xy_benchmark.py  test_accuracy_xy_plots.py  test_auto_conv.py  test_auto_conv_multiline.py  test_auto_conv_multiline_para_fit.py  test_auto_conv_multiline_sub_pixel.py  test_auto_conv_para_fit.py  test_auto_conv_sub_pixel.py  test_bead_simulation_sweep.py  test_benchmarks_package.py  test_binmean.py  test_center_of_mass.py  test_crop_stack_to_rois.py  test_gaussian.py  test_gaussian_2d.py  test_imports.py  test_log_utils.py  test_lookup_z.py  test_numpy_fallback.py  test_parabolic_vertex.py  test_pearson.py  test_plot_sweep.py  test_profiles.py  test_qi.py  test_qi_refine_xy.py  test_radial_profile.py
(+68 files in other folders)
