[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magtrack"
description = "Analyzes images of magnetic tweezers beads"
version = "0.3.3"
readme = "README.md"
authors = [
    {name = "James London", email = "7jameslondon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["numpy", "cupy-cuda12x"]

[tool.setuptools]
packages = ["magtrack"]

[project.optional-dependencies]
dev = ["yapf"]

[tool.yapf]
column_limit = 80
split_arguments_when_comma_terminated = true
dedent_closing_brackets = true