[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magtrack"
description = "Analyzes images of magnetic tweezers beads"
version = "0.3.2"
readme = "README.md"
authors = [
    {name = "James London", email = "7jameslondon@gmail.com" }
]
requires-python = ">=3.11"
dependencies = ["numpy", "scipy", "cupy-cuda12x"]

[tool.setuptools]
packages = ["magtrack"]

[project.optional-dependencies]
dev = ["yapf"]

[tool.yapf]
column_limit = 80
split_arguments_when_comma_terminated = true
dedent_closing_brackets = true